<resources>
    <string name="app_name">MealBoard</string>
    <string name="title">MealBoard</string>
    <string name="itemImage">Image</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="itemName">ItemName</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="Category">Category</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="username">Username</string>
    <string name="email">email@gmail.com</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="mobile_no_hint">Mobile No</string>
    <string name="my_cart">My Cart</string>
    <string name="grocery">Grocery</string>
    <string name="about">About</string>
    <string name="register">Registration</string>
    <string name="register_btn">Register</string>
    <string name="log_out">Log out</string>
    <string name="rate_us">Rate Us</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="cart">Cart</string>
    <string name="male">Male</string>
    <string name="home">Home</string>
    <string name="Dashboard">Dashboard</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="login_now">Log In</string>
    <string name="create_account">Create Account</string>
    <string name="thanks_for_visit">Thanks for Visit</string>
    <string name="meet_name">Meet Bariya</string>
    <string name="mobile_no">9426210509</string>
    <string name="gmail">meetybariya@gmail.com</string>
    <string name="login_to_register">Don\'t Have an Account? Register Now</string>
    <string name="register_to_login">Already Have an Account? Log In</string>
    <string name="designation">Software Developer</string>
    <string name="my_team">My Team</string>
    <string name="my_orders">My Orders</string>
    <string name="meetraj_gohil">Meetraj Gohil</string>
    <string name="chintan_gajera">Chintan Gajera</string>
    <string name="parth_chauhan">Parth Chauhan</string>
    <string name="project_guide">Jaydeep Tadhani Sir</string>
    <string name="guide">Project Guide</string>
    <string name="chintan_gmail">chintangajera@gmail.com</string>
    <string name="chintan_wap">8141718346</string>
    <string name="meetraj_wap">9328253746</string>
    <string name="meetraj_email">meetrajgohil@gmail.com</string>
    <string name="parth_email">chauhanparth@gmail.com</string>
    <string name="parth_wap">9904654107</string>
    <string name="my_order">My Orders</string>
    <string name="pay_now">Pay Now</string>
    <string name="login">Login</string>
    <string name="developers">Developers</string>
    <string name="share_mealboard">Share</string>
</resources>
