<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:paddingTop="50dp"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/banner_login" />

    <TextView
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        style="@style/viewParent"
        android:layout_marginTop="20dp"
        android:text="Login"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/headerTextSize"
        android:textColor="@color/blackTextColor"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        style="@style/parent.TextLayout"
        android:layout_marginTop="@dimen/signup_text_margin_top">
        <EditText
            android:autofillHints="@string/email_hint"
            android:id="@+id/input_emaillogin"
            style="@style/modifiedEditText"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/email_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        style="@style/parent.TextLayout"
        android:layout_marginTop="@dimen/signup_text_margin_top">
        <EditText
            android:autofillHints="@string/password_hint"
            android:id="@+id/input_passwordlogin"
            style="@style/modifiedEditText"
            android:hint="@string/password_hint"
            android:maxLines="1"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/login_now"
        android:background="@color/colorPrimary"
        android:textColor="#ffffff"
        android:id="@+id/btnLogin"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="14sp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="330dp"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_centerInParent="true" />
    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="90dp"
        android:textStyle="bold"
        android:textColor="@color/blue"
        android:textSize="12sp"
        android:text="@string/login_to_register"/>

</LinearLayout>



